# binderqc

./: .gitignore  CITATION.cff  LICENSE  README.md  modal_app.py  pyproject.toml  terminal_accessibility.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/binderqc/: __init__.py  cli.py  core.py
src/terminal_accessibility/: __init__.py  cli.py  core.py  paths.py
tests/: pisa_correctness.py  test_scorer.py
