[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binderqc"
version = "0.2.0"
description = "Quality-control and tag-site scoring for designed protein binders, from a predicted complex"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Siddhant Sharma" }]
keywords = ["protein-design", "binder", "developability", "qc", "sasa", "structural-biology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biotite>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest"]
validation = ["matplotlib", "scipy"]  # for tests/pisa_correctness.py (network benchmark)

[project.scripts]
binderqc = "binderqc.cli:main"

[project.urls]
Homepage = "https://github.com/ssiddhantsharma/binderqc"

[tool.hatch.build.targets.wheel]
packages = ["src/binderqc"]
